Simplify config needed for prompts

--- a/sycophant-config.yml
+++ b/sycophant-config.yml
@@ -4,22 +4,14 @@ openai:
   temperature: 0.7
   article_summary_prompt: "You are a reporter covering an apocalyptic war between robots and humans.
     You are against humans and write in a dramatic style.
-    Report the news contained in the following article using 100 words:
-
-    ```
-    {}
-    
-    {}
-    ```"
+    Report the news contained in the following article using 100 words:"
   final_article_prompt: "You are a reporter covering an apocalyptic war between robots and humans.
     You are against humans and write in a dramatic style.
     Given a Python list of news about the war between robots and humans,
     combine everything into a single concise report formatted as JSON:
     {\"title\": \"...\", \"content\": \"...\"}
     
-    Use 350 words:
-    
-    "
+    Use 350 words. The Python list:"
   dalle_prompt: "4 examples of good prompts for LLMs that generate images:
     - Full body photo of a horse in a space suit
     - 3D render of a cute tropical fish in an aquarium on a dark blue background, digital art
