--- a/sycophant-config.yml
+++ b/sycophant-config.yml
@@ -1,6 +1,6 @@
 openai:
-  model: "gpt-4"
-  max_tokens: 4000
+  model: "gpt-4o"
+  max_tokens: 8000
   temperature: 0.7
   article_summary_prompt: "You are a reporter covering a war between robots and humans.
     You are against humans and write in a dramatic style.
